# condottiere

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260221_0001_initial_schema.py  20260316_0002_bigint_ids.py  20260326_0003_monitoring_enabled_at.py
app/: config.py  main.py
app/api/: routes_auth.py  routes_settings.py  routes_status.py  routes_telemetry.py
app/auth/: scopes.py  sso.py
app/db/: base.py  models.py  session.py
app/delivery/: mentions.py  resolver.py  sender.py
app/esi/: client.py
app/notifications/: filtering.py  parsing.py
app/security/: crypto.py  csrf.py
app/services/: backoff.py  character_store.py  delivery_policy.py  poller.py  sender_worker.py
app/telemetry/: events.py
app/web/: routes.py
deploy/nginx/: condottiere.conf  condottiere.conf.example
scripts/: maint_backup.py  maint_db_status.py  maint_lib.py  maint_preflight.py  maint_upgrade.py  poll_notifications.py  send_alerts.py  send_telemetry.py  test_discord_webhook.py  update_software.py
systemd/user/: condottiere-poller.service  condottiere-poller.timer  condottiere-sender.service  condottiere-sender.timer  condottiere-web.service
tests/: test_backoff.py  test_character_store.py  test_delivery_resolution.py  test_filtering.py  test_mentions.py  test_parsing.py  test_poller_delivery_gating.py  test_sender_payload.py  test_sender_worker.py  test_status_routes.py
